--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>SecondStrap - {% block title %}Home{% endblock %}</title>
+    <title>TuckIndia.in - {% block title %}Home{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href={% static "images/logo.jpg" %}>
 
     <link rel="stylesheet" href="{% static 'css/breadcrumbs.css' %}">
@@ -40,7 +40,7 @@
 
     <header class="header">
         <nav class="navbar container">
-            <a href="/" class="logo">SecondStrap.in</a>
+            <a href="/" class="logo">TuckIndia.in.in</a>
 
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
@@ -50,7 +50,11 @@
             </ul>
 
             <div class="nav-icons">
-                <a href="{% url "profile_view_user" %}" aria-label="User Account"><i class='bx bx-user'></i></a>
+                {% if user.is_authenticated %}
+                    <a href="{% url "profile_view_user" %}" aria-label="User Account"><i class='bx bx-user'></i></a>
+                {% else %}
+                    <a href="{% url "login" %}">Login</a>
+                {% endif %}
                 <a href="#" aria-label="Wishlist"><i class='bx bx-heart'></i></a>
                 <a href="#" aria-label="Cart"><i class='bx bx-shopping-bag'></i></a>
             </div>
@@ -74,7 +78,7 @@
                 <h4>Contact & Service</h4>
                 <ul>
                     <li>+1 123 456 7890</li>
-                    <li>info@secondstrap.com</li>
+                    <li>info@TuckIndia.in.com</li>
                     <li>FAQs</li>
                     <li>Returns</li>
                     <li>Shipping</li>
@@ -105,8 +109,8 @@
 
         <hr class="footer-divider">
         <div class="footer-bottom container">
-            <p>© 2023 secondstrap All rights reserved.</p>
-            <p>Designed by secondstrap</p>
+            <p>© 2023 TuckIndia.in All rights reserved.</p>
+            <p>Designed by TuckIndia.in</p>
         </div>
     </footer>
 
